--- a/p1.ipynb
+++ b/p1.ipynb
@@ -562,7 +562,7 @@
     "                TN += CM[real, predicted]\n",
     "            if (real != PositiveClass and predicted == PositiveClass):\n",
     "                FP += CM[real, predicted]\n",
-    "            if (real != PositiveClass and predicted == PositiveClass):\n",
+    "            if (real == PositiveClass and predicted != PositiveClass):\n",
     "                FN += CM[real, predicted]\n",
     "    Sens = TP/(TP+FN)\n",
     "    Spec = TN/(TN+FP)\n",
