--- a/p1_bcw.ipynb
+++ b/p1_bcw.ipynb
@@ -14,7 +14,8 @@
     "import itertools as it\n",
     "from sklearn.neighbors import LocalOutlierFactor\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV, KFold\n",
-    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis, QuadraticDiscriminantAnalysis\n",
+    "from sklearn.discriminant_analysis import (LinearDiscriminantAnalysis,\n",
+    "                                           QuadraticDiscriminantAnalysis)\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
     "from sklearn.utils import shuffle\n",
     "from scipy import stats\n",
@@ -39,7 +40,8 @@
    "outputs": [],
    "source": [
     "# Cargamos dataset Breast Cancer Wisconsin (Original)\n",
-    "ds = pd.read_csv('./breast-cancer-wisconsin.data', usecols=[1,2,3,4,5,6,7,8,9,10], names=[0,1,2,3,4,5,6,7,8,9], header=None)"
+    "ds = pd.read_csv('./breast-cancer-wisconsin.data', usecols=[1,2,3,4,5,6,7,8,9,10], \n",
+    "                 names=[0,1,2,3,4,5,6,7,8,9], header=None)"
    ]
   },
   {
@@ -81,7 +83,8 @@
     "nposit = len(ds_u[ds_u[output] == 1])\n",
     "# Índices de casos negativos\n",
     "inegat = ds_u[ds_u[output] == 0].index\n",
-    "# Cogemos aleatoriamente un número de índices negativos igual al número de casos positivos\n",
+    "# Cogemos aleatoriamente un número de índices negativos\n",
+    "# igual al número de casos positivos\n",
     "random_indices = np.random.choice(inegat, nposit, replace=False)\n",
     "# Obtenemos todos los índices positivos\n",
     "iposit = ds_u[ds_u[output] == 1].index\n",
@@ -512,7 +515,9 @@
     }
    ],
    "source": [
-    "print(stats.kruskal(resultados_test[:,0],resultados_test[:,1],resultados_test[:,2]))"
+    "print(stats.kruskal(resultados_test[:,0],\n",
+    "                    resultados_test[:,1],\n",
+    "                    resultados_test[:,2]))"
    ]
   },
   {
@@ -594,7 +599,10 @@
     }
    ],
    "source": [
-    "print(stats.kruskal(resultados_test[:,0],resultados_test[:,1],resultados_test[:,2], resultados_testq))"
+    "print(stats.kruskal(resultados_test[:,0],\n",
+    "                    resultados_test[:,1],\n",
+    "                    resultados_test[:,2],\n",
+    "                    resultados_testq))"
    ]
   },
   {
@@ -620,32 +628,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Multiple Comparison of Means - Tukey HSD,FWER=0.05\n",
-      "============================================\n",
-      "group1 group2 meandiff  lower  upper  reject\n",
-      "--------------------------------------------\n",
-      "  0      1    -0.0063  -0.0329 0.0203 False \n",
-      "  0      2      0.0    -0.0266 0.0266 False \n",
-      "  0      3     0.0272   0.0006 0.0538  True \n",
-      "  1      2     0.0063  -0.0203 0.0329 False \n",
-      "  1      3     0.0335   0.0069 0.0601  True \n",
-      "  2      3     0.0272   0.0006 0.0538  True \n",
-      "--------------------------------------------\n"
-     ]
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>Multiple Comparison of Means - Tukey HSD,FWER=0.05</caption>\n",
+       "<tr>\n",
+       "  <th>group1</th> <th>group2</th> <th>meandiff</th>  <th>lower</th>   <th>upper</th> <th>reject</th>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "     <td>0</td>      <td>1</td>    <td>-0.0063</td> <td>-0.0329</td> <td>0.0203</td>  <td>False</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "     <td>0</td>      <td>2</td>      <td>0.0</td>   <td>-0.0266</td> <td>0.0266</td>  <td>False</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "     <td>0</td>      <td>3</td>    <td>0.0272</td>  <td>0.0006</td>  <td>0.0538</td>  <td>True</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "     <td>1</td>      <td>2</td>    <td>0.0063</td>  <td>-0.0203</td> <td>0.0329</td>  <td>False</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "     <td>1</td>      <td>3</td>    <td>0.0335</td>  <td>0.0069</td>  <td>0.0601</td>  <td>True</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "     <td>2</td>      <td>3</td>    <td>0.0272</td>  <td>0.0006</td>  <td>0.0538</td>  <td>True</td> \n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.table.SimpleTable'>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "resultados = pairwise_tukeyhsd(resultados_test,labels)\n",
-    "print(resultados.summary())"
+    "resultados.summary()"
    ]
   },
   {
@@ -748,7 +775,8 @@
     "y_pred = alg.predict(X_test)\n",
     "CM = confusion_matrix(y_test, y_pred)\n",
     "Sens,Spec,PPV,NPV,ACC = performance_indexes(CM,0)\n",
-    "print('Sens: {:.2f}, Spec: {:.2f}, PPV: {:.2f}, NPV: {:.2f}, ACC: {:.2f}'.format(Sens,Spec,PPV,NPV,ACC))\n",
+    "print(('Sens: {:.2f}, Spec: {:.2f}, PPV: {:.2f}, ' +\n",
+    "      'NPV: {:.2f}, ACC: {:.2f}').format(Sens,Spec,PPV,NPV,ACC))\n",
     "alg.score(X_test, y_test)"
    ]
   },
@@ -782,7 +810,8 @@
     "y_pred = alg.predict(X_test)\n",
     "CM = confusion_matrix(y_test, y_pred)\n",
     "Sens,Spec,PPV,NPV,ACC = performance_indexes(CM,0)\n",
-    "print('Sens: {:.2f}, Spec: {:.2f}, PPV: {:.2f}, NPV: {:.2f}, ACC: {:.2f}'.format(Sens,Spec,PPV,NPV,ACC))\n",
+    "print(('Sens: {:.2f}, Spec: {:.2f}, PPV: {:.2f}, ' +\n",
+    "      'NPV: {:.2f}, ACC: {:.2f}').format(Sens,Spec,PPV,NPV,ACC))\n",
     "alg.score(X_test, y_test)"
    ]
   },
