--- a/p1_bcw.ipynb
+++ b/p1_bcw.ipynb
@@ -44,13 +44,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cargamos dataset Breast Cancer Wisconsin (Original)\n",
     "ds = pd.read_csv('./breast-cancer-wisconsin.data', usecols=[1,2,3,4,5,6,7,8,9,10], \n",
     "                 names=[0,1,2,3,4,5,6,7,8,9], header=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(699, 10)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.shape\n"
    ]
   },
   {
@@ -628,48 +648,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"simpletable\">\n",
-       "<caption>Multiple Comparison of Means - Tukey HSD,FWER=0.05</caption>\n",
-       "<tr>\n",
-       "  <th>group1</th> <th>group2</th> <th>meandiff</th>  <th>lower</th>   <th>upper</th> <th>reject</th>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "     <td>0</td>      <td>1</td>      <td>0.0</td>   <td>-0.0124</td> <td>0.0124</td>  <td>False</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "     <td>0</td>      <td>2</td>      <td>0.0</td>   <td>-0.0124</td> <td>0.0124</td>  <td>False</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "     <td>0</td>      <td>3</td>    <td>-0.0021</td> <td>-0.0146</td> <td>0.0103</td>  <td>False</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "     <td>1</td>      <td>2</td>      <td>0.0</td>   <td>-0.0124</td> <td>0.0124</td>  <td>False</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "     <td>1</td>      <td>3</td>    <td>-0.0021</td> <td>-0.0146</td> <td>0.0103</td>  <td>False</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "     <td>2</td>      <td>3</td>    <td>-0.0021</td> <td>-0.0146</td> <td>0.0103</td>  <td>False</td>\n",
-       "</tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<class 'statsmodels.iolib.table.SimpleTable'>"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "resultados = pairwise_tukeyhsd(resultados_test,labels)\n",
     "resultados.summary()"
