--- a/p2.ipynb
+++ b/p2.ipynb
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
        "<class 'statsmodels.iolib.table.SimpleTable'>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,29 +696,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'LDA svd'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#seleccionamos el que tiene mejor media y vemos en el anterior cuales son iguales\n",
     "best_group = np.argmax(np.mean(res_valid, axis = 0))\n",
-    "etiquetas[best_group]"
+    "best_group = etiquetas[int(best_group)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +731,7 @@
     }
    ],
    "source": [
-    "print(resultados.plot_simultaneous(comparison_name=etiquetas[best_group]))"
+    "print(resultados.plot_simultaneous(comparison_name=best_group))"
    ]
   },
   {
@@ -780,7 +769,7 @@
     "        best_groups.append(row[group1])\n",
     "        best_groups.append(row[group2])\n",
     "best_groups = set(best_groups)\n",
-    "sorted([etiquetas[int(i)] for i in best_groups])"
+    "sorted(best_groups)"
    ]
   },
   {
@@ -894,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
