--- a/p2_bcw.ipynb
+++ b/p2_bcw.ipynb
@@ -362,7 +362,7 @@
    "metadata": {},
    "source": [
     "**Test de normalidad**  \n",
-    "Rechazamos normalidad, podriamos asumir normalidad con algún "
+    "Rechazamos normalidad, podriamos asumir normalidad en alguno de ellos pero como en algunos no, realizamos el test no paramétrico de Kruskal-Wallis en lugar de un Anova "
    ]
   },
   {
@@ -557,22 +557,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'LDA eigen'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#seleccionamos el que tiene mejor media y vemos en el anterior cuales son iguales\n",
     "best_group = np.argmax(np.mean(res_valid, axis = 0))\n",
-    "etiquetas[best_group]"
+    "best_group = etiquetas[int(best_group)]"
    ]
   },
   {
@@ -601,7 +590,7 @@
     }
    ],
    "source": [
-    "print(resultados.plot_simultaneous(comparison_name=etiquetas[best_group]))"
+    "print(resultados.plot_simultaneous(comparison_name=best_group))"
    ]
   },
   {
@@ -621,7 +610,14 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['DT Minimo de muestras en subarbol',\n",
+       " 'DT Minimo de muestras por hoja',\n",
+       " 'DT Normal',\n",
+       " 'DT Profundidad',\n",
+       " 'LDA eigen',\n",
+       " 'LDA lsqr',\n",
+       " 'LDA svd',\n",
+       " 'QDA']"
       ]
      },
      "execution_count": 20,
@@ -639,7 +635,7 @@
     "        best_groups.append(row[group1])\n",
     "        best_groups.append(row[group2])\n",
     "best_groups = set(best_groups)\n",
-    "sorted([etiquetas[int(i)] for i in best_groups])"
+    "sorted(best_groups)"
    ]
   },
   {
