Codigo de MLPC en clasificacion

--- a/HENON.ipynb
+++ b/HENON.ipynb
@@ -59,8 +59,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Xinicial,_ = Henon(100)\n",
-    "X,y = Ventanas(Xinicial,25)"
+    "Xinicial,_ = Henon(1000)\n",
+    "X,y = Ventanas(Xinicial,25)\n",
+    "#X,y = Ventanas(Xinicial,50)"
    ]
   },
   {
