--- a/p3_bcw.ipynb
+++ b/p3_bcw.ipynb
@@ -504,6 +504,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**kFold - Multi-layer Perceptron Classifier**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "etiquetas.extend(['MLPR sgd 10 relu',\n",
+    "             'MLPR sgd 30 relu',\n",
+    "             'MLPR sgd 50 relu',\n",
+    "             'MLPR adam 10 relu',\n",
+    "             'MLPR adam 30 relu',\n",
+    "             'MLPR adam 50 relu'])\n",
+    "etiquetas.extend(['MLPR sgd 10 tanh',\n",
+    "             'MLPR sgd 30 tanh',\n",
+    "             'MLPR sgd 50 tanh',\n",
+    "             'MLPR adam 10 tanh',\n",
+    "             'MLPR adam 30 tanh',\n",
+    "             'MLPR adam 50 tanh'])\n",
+    "dicc = [{'hidden_layer_sizes': (10,), 'solver': 'sgd',  'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "        {'hidden_layer_sizes': (30,), 'solver': 'sgd',  'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "        {'hidden_layer_sizes': (50,), 'solver': 'sgd',  'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "        {'hidden_layer_sizes': (10,), 'solver': 'adam', 'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "        {'hidden_layer_sizes': (30,), 'solver': 'adam', 'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "        {'hidden_layer_sizes': (50,), 'solver': 'adam', 'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "        {'hidden_layer_sizes': (10,), 'solver': 'sgd',  'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
+    "        {'hidden_layer_sizes': (30,), 'solver': 'sgd',  'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
+    "        {'hidden_layer_sizes': (50,), 'solver': 'sgd',  'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
+    "        {'hidden_layer_sizes': (10,), 'solver': 'adam', 'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
+    "        {'hidden_layer_sizes': (30,), 'solver': 'adam', 'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
+    "        {'hidden_layer_sizes': (50,), 'solver': 'adam', 'activation': 'tanh','early_stopping': True, 'max_iter': 1500}]\n",
+    "\n",
+    "for i in range(len(dicc)):\n",
+    "    train_indices2 = []\n",
+    "    test_indices2 = []\n",
+    "    for j in range(3):\n",
+    "        for train_index, test_index in kf.split(X):\n",
+    "            X_train, X_test,y_train, y_test = X[train_index],X[test_index],y[train_index],y[test_index]\n",
+    "            train_indices2.append(train_index)\n",
+    "            test_indices2.append(test_index)\n",
+    "            alg = MLPClassifier(**dicc[i])\n",
+    "            alg.fit(X_train, y_train)\n",
+    "            model.append(alg)\n",
+    "            y_pred_test = alg.predict(X_test)\n",
+    "            y_pred_train = alg.predict(X_train)\n",
+    "            resultados_train.append(mean_squared_error(y_train,y_pred_train))\n",
+    "            resultados_test.append(mean_squared_error(y_test,y_pred_test))\n",
+    "    res_train = np.hstack((res_train, np.array(resultados_train,ndmin=2).T))\n",
+    "    res_test = np.hstack((res_test, np.array(resultados_test,ndmin=2).T))\n",
+    "    resultados_train = []\n",
+    "    resultados_test = []\n",
+    "    train_indices.append(train_indices2)\n",
+    "    test_indices.append(test_indices2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Persistencia**"
    ]
   },
