--- a/p3_bcw.ipynb
+++ b/p3_bcw.ipynb
@@ -570,11 +570,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 315 ms\n",
-      "Wall time: 302 ms\n",
-      "Wall time: 52 ms\n",
-      "Wall time: 16.9 s\n",
-      "Wall time: 18 s\n"
+      "Decision Tree Classifier\n",
+      "Wall time: 330 ms\n",
+      "Lineal Discriminant Analysis\n",
+      "Wall time: 2.53 s\n",
+      "Quadratic Discriminant Analysis\n",
+      "Wall time: 184 ms\n",
+      "Support Vector Classification\n",
+      "Wall time: 15.9 s\n",
+      "Multi-layer Perceptron Classifier\n",
+      "Wall time: 18.6 s\n"
      ]
     }
    ],
@@ -611,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,12 +627,14 @@
     "with open('p3_bcw-test_indices.bin','wb') as file:\n",
     "    pickle.dump(test_indices, file)\n",
     "with open('p3_bcw-models.bin','wb') as file:\n",
-    "    pickle.dump(model, file)"
+    "    pickle.dump(model, file)\n",
+    "with open('p3_bcw-etiquetas.bin','wb') as file:\n",
+    "    pickle.dump(etiquetas, file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +645,9 @@
     "with open('p3_bcw-test_indices.bin','rb') as file:\n",
     "    test_indices = pickle.load(file)\n",
     "with open('p3_bcw-models.bin','rb') as file:\n",
-    "    model = pickle.load(file)"
+    "    model = pickle.load(file)\n",
+    "with open('p3_bcw-etiquetas.bin','rb') as file:\n",
+    "    etiquetas = pickle.load(file)"
    ]
   },
   {
@@ -651,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +680,7 @@
        "       7.94861093e-02])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {
     "scrolled": false
    },
@@ -709,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +828,7 @@
        " 'SVM rfb auto C1000']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
