Formateo y pequeños cambios

--- a/HENON.ipynb
+++ b/HENON.ipynb
@@ -100,29 +100,46 @@
     "                 'SVR rfb 0.05 C100',\n",
     "                 'SVR rfb 0.1 C100',\n",
     "                 'SVR rfb 0.2 C100'])\n",
-    "    dicc = [{'C': 1.0, 'kernel': 'linear', 'degree': 1, 'gamma': 'auto', 'tol': 0.1},\n",
-    "            {'C': 1.0, 'kernel': 'poly', 'degree': 2, 'gamma': 'auto', 'tol': 0.1},\n",
-    "            {'C': 1.0, 'kernel': 'poly', 'degree': 3, 'gamma': 'auto', 'tol': 0.1},\n",
-    "            {'C': 1.0, 'kernel': 'poly', 'degree': 4, 'gamma': 'auto', 'tol': 0.1},\n",
-    "            {'C': 1.0, 'kernel': 'rbf', 'degree': 2, 'gamma': 'auto', 'tol': 0.1},\n",
-    "            {'C': 1.0, 'kernel': 'rbf', 'degree': 2, 'gamma': 0.05, 'tol': 0.1},\n",
-    "            {'C': 1.0, 'kernel': 'rbf', 'degree': 2, 'gamma': 0.1, 'tol': 0.1},\n",
-    "            {'C': 1.0, 'kernel': 'rbf', 'degree': 2, 'gamma': 0.2, 'tol': 0.1},\n",
-    "            {'C': 100.0, 'kernel': 'linear', 'degree': 1, 'gamma': 'auto', 'tol': 0.1},\n",
-    "            {'C': 100.0, 'kernel': 'poly', 'degree': 2, 'gamma': 'auto', 'tol': 0.1},\n",
-    "            {'C': 100.0, 'kernel': 'poly', 'degree': 3, 'gamma': 'auto', 'tol': 0.1},\n",
-    "            {'C': 100.0, 'kernel': 'poly', 'degree': 4, 'gamma': 'auto', 'tol': 0.1},\n",
-    "            {'C': 100.0, 'kernel': 'rbf', 'degree': 2, 'gamma': 'auto', 'tol': 0.1},\n",
-    "            {'C': 100.0, 'kernel': 'rbf', 'degree': 2, 'gamma': 0.05, 'tol': 0.1},\n",
-    "            {'C': 100.0, 'kernel': 'rbf', 'degree': 2, 'gamma': 0.1, 'tol': 0.1},\n",
-    "            {'C': 100.0, 'kernel': 'rbf', 'degree': 2, 'gamma': 0.2, 'tol': 0.1}]\n",
+    "    dicc = [{'C': 1.0, 'kernel': 'linear', 'degree': 1, \n",
+    "             'gamma': 'auto', 'tol': 0.1},\n",
+    "            {'C': 1.0, 'kernel': 'poly', 'degree': 2,   \n",
+    "             'gamma': 'auto', 'tol': 0.1},\n",
+    "            {'C': 1.0, 'kernel': 'poly', 'degree': 3,   \n",
+    "             'gamma': 'auto', 'tol': 0.1},\n",
+    "            {'C': 1.0, 'kernel': 'poly', 'degree': 4,   \n",
+    "             'gamma': 'auto', 'tol': 0.1},\n",
+    "            {'C': 1.0, 'kernel': 'rbf', 'degree': 2,    \n",
+    "             'gamma': 'auto', 'tol': 0.1},\n",
+    "            {'C': 1.0, 'kernel': 'rbf', 'degree': 2,    \n",
+    "             'gamma': 0.05, 'tol': 0.1},\n",
+    "            {'C': 1.0, 'kernel': 'rbf', 'degree': 2,    \n",
+    "             'gamma': 0.1, 'tol': 0.1},\n",
+    "            {'C': 1.0, 'kernel': 'rbf', 'degree': 2,    \n",
+    "             'gamma': 0.2, 'tol': 0.1},\n",
+    "            {'C': 100.0, 'kernel': 'linear', 'degree': 1, \n",
+    "             'gamma': 'auto', 'tol': 0.1},\n",
+    "            {'C': 100.0, 'kernel': 'poly', 'degree': 2, \n",
+    "             'gamma': 'auto', 'tol': 0.1},\n",
+    "            {'C': 100.0, 'kernel': 'poly', 'degree': 3, \n",
+    "             'gamma': 'auto', 'tol': 0.1},\n",
+    "            {'C': 100.0, 'kernel': 'poly', 'degree': 4, \n",
+    "             'gamma': 'auto', 'tol': 0.1},\n",
+    "            {'C': 100.0, 'kernel': 'rbf', 'degree': 2, \n",
+    "             'gamma': 'auto', 'tol': 0.1},\n",
+    "            {'C': 100.0, 'kernel': 'rbf', 'degree': 2, \n",
+    "             'gamma': 0.05, 'tol': 0.1},\n",
+    "            {'C': 100.0, 'kernel': 'rbf', 'degree': 2, \n",
+    "             'gamma': 0.1, 'tol': 0.1},\n",
+    "            {'C': 100.0, 'kernel': 'rbf', 'degree': 2, \n",
+    "             'gamma': 0.2, 'tol': 0.1}]\n",
     "\n",
     "    for i in range(len(dicc)):\n",
     "        train_indices2 = []\n",
     "        test_indices2 = []\n",
     "        for j in range(3):\n",
     "            for train_index, test_index in kf.split(X):\n",
-    "                X_train, X_test,y_train, y_test = X[train_index],X[test_index],y[train_index],y[test_index]\n",
+    "                X_train, X_test = X[train_index],X[test_index]\n",
+    "                y_train, y_test = y[train_index],y[test_index]\n",
     "                train_indices2.append(train_index)\n",
     "                test_indices2.append(test_index)\n",
     "                alg = SVR(**dicc[i])\n",
@@ -152,6 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def MLP_multiple():\n",
     "    \n",
     "    global resultados_train\n",
@@ -175,25 +193,38 @@
     "                 'MLPR adam 10 tanh',\n",
     "                 'MLPR adam 30 tanh',\n",
     "                 'MLPR adam 50 tanh'])\n",
-    "    dicc = [{'hidden_layer_sizes': (10,), 'solver': 'sgd',  'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (30,), 'solver': 'sgd',  'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (50,), 'solver': 'sgd',  'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (10,), 'solver': 'adam', 'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (30,), 'solver': 'adam', 'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (50,), 'solver': 'adam', 'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (10,), 'solver': 'sgd',  'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (30,), 'solver': 'sgd',  'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (50,), 'solver': 'sgd',  'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (10,), 'solver': 'adam', 'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (30,), 'solver': 'adam', 'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (50,), 'solver': 'adam', 'activation': 'tanh','early_stopping': True, 'max_iter': 1500}]\n",
+    "    dicc = [{'hidden_layer_sizes': (10,), 'solver': 'sgd',  \n",
+    "             'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (30,), 'solver': 'sgd',  \n",
+    "             'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (50,), 'solver': 'sgd',  \n",
+    "             'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (10,), 'solver': 'adam', \n",
+    "             'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (30,), 'solver': 'adam', \n",
+    "             'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (50,), 'solver': 'adam', \n",
+    "             'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (10,), 'solver': 'sgd',  \n",
+    "             'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (30,), 'solver': 'sgd',  \n",
+    "             'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (50,), 'solver': 'sgd',  \n",
+    "             'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (10,), 'solver': 'adam', \n",
+    "             'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (30,), 'solver': 'adam', \n",
+    "             'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (50,), 'solver': 'adam', \n",
+    "             'activation': 'tanh','early_stopping': True, 'max_iter': 1500}]\n",
     "\n",
     "    for i in range(len(dicc)):\n",
     "        train_indices2 = []\n",
     "        test_indices2 = []\n",
     "        for j in range(3):\n",
     "            for train_index, test_index in kf.split(X):\n",
-    "                X_train, X_test,y_train, y_test = X[train_index],X[test_index],y[train_index],y[test_index]\n",
+    "                X_train, X_test = X[train_index],X[test_index]\n",
+    "                y_train, y_test = y[train_index],y[test_index]\n",
     "                train_indices2.append(train_index)\n",
     "                test_indices2.append(test_index)\n",
     "                alg = MLPRegressor(**dicc[i])\n",
@@ -713,17 +744,6 @@
     "best_groups.append(best_group)\n",
     "best_groups = set(best_groups)\n",
     "sorted(best_groups)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Nos quedamos con el más sencillo**  \n",
-    "El cual asumimos que es el MLPR con:\n",
-    "- sgd (Stochastic Gradient Descent)  \n",
-    "- relu (Rectified linear unit function)  \n",
-    "- 10 neuronas en la capa oculta"
    ]
   },
   {
