--- a/p3_bcw.ipynb
+++ b/p3_bcw.ipynb
@@ -291,18 +291,24 @@
     "                 'LDA eigen',\n",
     "                 'LDA svd',\n",
     "                 'QDA'])\n",
-    "    dicc = [{'max_depth': None, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_impurity_decrease': 0.0},\n",
-    "            {'max_depth': 5,    'min_samples_leaf': 1, 'min_samples_split': 2, 'min_impurity_decrease': 0.0},\n",
-    "            {'max_depth': None, 'min_samples_leaf': 3, 'min_samples_split': 2, 'min_impurity_decrease': 0.0},\n",
-    "            {'max_depth': None, 'min_samples_leaf': 1, 'min_samples_split': 5, 'min_impurity_decrease': 0.0},\n",
-    "            {'max_depth': None, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_impurity_decrease': 0.2}]\n",
+    "    dicc = [{'max_depth': None, 'min_samples_leaf': 1, \n",
+    "             'min_samples_split': 2, 'min_impurity_decrease': 0.0},\n",
+    "            {'max_depth': 5,    'min_samples_leaf': 1, \n",
+    "             'min_samples_split': 2, 'min_impurity_decrease': 0.0},\n",
+    "            {'max_depth': None, 'min_samples_leaf': 3, \n",
+    "             'min_samples_split': 2, 'min_impurity_decrease': 0.0},\n",
+    "            {'max_depth': None, 'min_samples_leaf': 1, \n",
+    "             'min_samples_split': 5, 'min_impurity_decrease': 0.0},\n",
+    "            {'max_depth': None, 'min_samples_leaf': 1, \n",
+    "             'min_samples_split': 2, 'min_impurity_decrease': 0.2}]\n",
     "\n",
     "    for i in range(len(dicc)):\n",
     "        train_indices2 = []\n",
     "        test_indices2 = []\n",
     "        for j in range(3):\n",
     "            for train_index, test_index in kf.split(X):\n",
-    "                X_train, X_test, y_train, y_test = X[train_index],X[test_index],y[train_index],y[test_index]\n",
+    "                X_train, X_test = X[train_index],X[test_index]\n",
+    "                y_train, y_test = y[train_index],y[test_index]\n",
     "                train_indices2.append(train_index)\n",
     "                test_indices2.append(test_index)\n",
     "                alg = DecisionTreeClassifier(**dicc[i])\n",
@@ -327,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +350,8 @@
     "        test_indices2 = []\n",
     "        for _ in range(3):\n",
     "            for train_index, test_index in kf.split(X):\n",
-    "                X_train, X_test, y_train, y_test = X[train_index],X[test_index],y[train_index],y[test_index]\n",
+    "                X_train, X_test = X[train_index],X[test_index]\n",
+    "                y_train, y_test = y[train_index],y[test_index]\n",
     "                alg = LinearDiscriminantAnalysis(solver=tipo, shrinkage=None)\n",
     "                train_indices2.append(train_index)\n",
     "                test_indices2.append(test_index)\n",
@@ -385,7 +392,8 @@
     "    test_indices2 = []\n",
     "    for _ in range(3):\n",
     "        for train_index, test_index in kf.split(X):\n",
-    "            X_train, X_test, y_train, y_test = X[train_index],X[test_index],y[train_index],y[test_index]\n",
+    "            X_train, X_test = X[train_index],X[test_index]\n",
+    "            y_train, y_test = y[train_index],y[test_index]\n",
     "            train_indices2.append(train_index)\n",
     "            test_indices2.append(test_index)\n",
     "            alg = QuadraticDiscriminantAnalysis()\n",
@@ -477,7 +485,8 @@
     "        test_indices2 = []\n",
     "        for j in range(3):\n",
     "            for train_index, test_index in kf.split(X):\n",
-    "                X_train, X_test, y_train, y_test = X[train_index],X[test_index],y[train_index],y[test_index]\n",
+    "                X_train, X_test = X[train_index],X[test_index]\n",
+    "                y_train, y_test = y[train_index],y[test_index]\n",
     "                train_indices2.append(train_index)\n",
     "                test_indices2.append(test_index)\n",
     "                alg = SVC(**dicc[i])\n",
@@ -527,25 +536,38 @@
     "                 'MLPR adam 10 tanh',\n",
     "                 'MLPR adam 30 tanh',\n",
     "                 'MLPR adam 50 tanh'])\n",
-    "    dicc = [{'hidden_layer_sizes': (10,), 'solver': 'sgd',  'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (30,), 'solver': 'sgd',  'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (50,), 'solver': 'sgd',  'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (10,), 'solver': 'adam', 'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (30,), 'solver': 'adam', 'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (50,), 'solver': 'adam', 'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (10,), 'solver': 'sgd',  'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (30,), 'solver': 'sgd',  'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (50,), 'solver': 'sgd',  'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (10,), 'solver': 'adam', 'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (30,), 'solver': 'adam', 'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
-    "            {'hidden_layer_sizes': (50,), 'solver': 'adam', 'activation': 'tanh','early_stopping': True, 'max_iter': 1500}]\n",
+    "    dicc = [{'hidden_layer_sizes': (10,), 'solver': 'sgd',  \n",
+    "             'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (30,), 'solver': 'sgd',  \n",
+    "             'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (50,), 'solver': 'sgd',  \n",
+    "             'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (10,), 'solver': 'adam', \n",
+    "             'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (30,), 'solver': 'adam', \n",
+    "             'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (50,), 'solver': 'adam', \n",
+    "             'activation': 'relu','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (10,), 'solver': 'sgd',  \n",
+    "             'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (30,), 'solver': 'sgd',  \n",
+    "             'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (50,), 'solver': 'sgd',  \n",
+    "             'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (10,), 'solver': 'adam', \n",
+    "             'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (30,), 'solver': 'adam', \n",
+    "             'activation': 'tanh','early_stopping': True, 'max_iter': 1500},\n",
+    "            {'hidden_layer_sizes': (50,), 'solver': 'adam', \n",
+    "             'activation': 'tanh','early_stopping': True, 'max_iter': 1500}]\n",
     "\n",
     "    for i in range(len(dicc)):\n",
     "        train_indices2 = []\n",
     "        test_indices2 = []\n",
     "        for j in range(3):\n",
     "            for train_index, test_index in kf.split(X):\n",
-    "                X_train, X_test,y_train, y_test = X[train_index],X[test_index],y[train_index],y[test_index]\n",
+    "                X_train, X_test = X[train_index],X[test_index]\n",
+    "                y_train, y_test = y[train_index],y[test_index]\n",
     "                train_indices2.append(train_index)\n",
     "                test_indices2.append(test_index)\n",
     "                alg = MLPClassifier(**dicc[i])\n",
@@ -655,7 +677,7 @@
    "metadata": {},
    "source": [
     "**Test de normalidad**  \n",
-    "Rechazamos normalidad, podriamos asumir normalidad en alguno de ellos pero como en algunos no, realizamos el test no paramétrico de Kruskal-Wallis en lugar de un Anova "
+    "Rechazamos normalidad, por lo que realizamos el test no paramétrico de Kruskal-Wallis en lugar de un Anova "
    ]
   },
   {
