Lluvia de cambios para rematar la faena

--- a/p3_musk.ipynb
+++ b/p3_musk.ipynb
@@ -128,7 +128,7 @@
    "metadata": {},
    "source": [
     "**Comprobamos que las clases no estén desbalanceadas**  \n",
-    "Están un poco desbalanceadas."
+    "Están desbalanceadas. Como trabajo futuro podríamos hacer oversampling o undersampling."
    ]
   },
   {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
        "       7.10717142e-02, 5.97309768e-02, 3.80838737e-02, 5.88941574e-02])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,13 +622,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Test Anova**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F_onewayResult(statistic=350.0213105964739, pvalue=0.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(stats.f_oneway(*zip(*list(res_test))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Test de Kruskal-Wallis**  \n",
     "Rechazamos que las precisiones sean similares"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -647,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +745,7 @@
        " 'SVM rfb 0.05 C1']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,18 +794,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MLPR adam 30 relu -> Sens: 0.92, Spec: 0.99, PPV: 0.96, NPV: 0.99, ACC: 0.98\n",
-      "MLPR adam 30 tanh -> Sens: 0.92, Spec: 0.99, PPV: 0.96, NPV: 0.99, ACC: 0.98\n",
-      "MLPR adam 50 relu -> Sens: 0.95, Spec: 0.99, PPV: 0.97, NPV: 0.99, ACC: 0.99\n",
-      "MLPR adam 50 tanh -> Sens: 0.95, Spec: 1.00, PPV: 0.97, NPV: 0.99, ACC: 0.99\n",
-      "SVM rfb 0.05 C1 -> Sens: 0.97, Spec: 0.99, PPV: 0.95, NPV: 0.99, ACC: 0.99\n"
+      "MLPR adam 30 relu -> Sens: 0.92 +- 0.06, Spec: 0.99 +- 0.00, PPV: 0.96 +- 0.02, NPV: 0.99 +- 0.01, ACC: 0.98 +- 0.01\n",
+      "MLPR adam 30 tanh -> Sens: 0.92 +- 0.05, Spec: 0.99 +- 0.00, PPV: 0.96 +- 0.03, NPV: 0.99 +- 0.01, ACC: 0.98 +- 0.01\n",
+      "MLPR adam 50 relu -> Sens: 0.95 +- 0.05, Spec: 0.99 +- 0.00, PPV: 0.97 +- 0.02, NPV: 0.99 +- 0.01, ACC: 0.99 +- 0.01\n",
+      "MLPR adam 50 tanh -> Sens: 0.95 +- 0.03, Spec: 1.00 +- 0.00, PPV: 0.97 +- 0.02, NPV: 0.99 +- 0.01, ACC: 0.99 +- 0.01\n",
+      "SVM rfb 0.05 C1 -> Sens: 0.97 +- 0.02, Spec: 0.99 +- 0.00, PPV: 0.95 +- 0.02, NPV: 0.99 +- 0.00, ACC: 0.99 +- 0.00\n"
      ]
     }
    ],
@@ -806,12 +830,13 @@
     "        PPV_l.append(PPV)\n",
     "        NPV_l.append(NPV)\n",
     "        ACC_l.append(ACC)\n",
-    "    print(etiqueta,('-> Sens: {:.2f}, Spec: {:.2f}, ' +\n",
-    "           'PPV: {:.2f}, NPV: {:.2f}, ACC: {:.2f}').format(np.mean(Sens_l),\n",
-    "                                                           np.mean(Spec_l),\n",
-    "                                                           np.mean(PPV_l),\n",
-    "                                                           np.mean(NPV_l),\n",
-    "                                                           np.mean(ACC_l)))"
+    "    print(etiqueta,('-> Sens: {:.2f} +- {:.2f}, Spec: {:.2f} +- {:.2f}, ' +\n",
+    "           'PPV: {:.2f} +- {:.2f}, NPV: {:.2f} +- {:.2f}, ACC: {:.2f} +- {:.2f}').format(\n",
+    "        np.mean(Sens_l), np.std(Sens_l),\n",
+    "        np.mean(Spec_l), np.std(Spec_l),\n",
+    "        np.mean(PPV_l), np.std(PPV_l),\n",
+    "        np.mean(NPV_l), np.std(NPV_l),\n",
+    "        np.mean(ACC_l), np.std(ACC_l)))"
    ]
   },
   {
@@ -892,7 +917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
