--- a/p5.ipynb
+++ b/p5.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "       0.52648097, 0.11561864])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        " 'MLPR adam 50 tanh']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,17 +418,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MLPR adam 30 relu -> Sens: 0.69, Spec: 0.99, PPV: 0.91, NPV: 0.95, ACC: 0.94\n",
-      "MLPR adam 30 tanh -> Sens: 0.76, Spec: 0.99, PPV: 0.91, NPV: 0.96, ACC: 0.95\n",
-      "MLPR adam 50 relu -> Sens: 0.72, Spec: 0.99, PPV: 0.92, NPV: 0.95, ACC: 0.95\n",
-      "MLPR adam 50 tanh -> Sens: 0.80, Spec: 0.99, PPV: 0.92, NPV: 0.96, ACC: 0.96\n"
+      "MLPR adam 30 relu -> Sens: 0.69 +- 0.07, Spec: 0.99 +- 0.00, PPV: 0.91 +- 0.03, NPV: 0.95 +- 0.01, ACC: 0.94 +- 0.01\n",
+      "MLPR adam 30 tanh -> Sens: 0.76 +- 0.07, Spec: 0.99 +- 0.01, PPV: 0.91 +- 0.04, NPV: 0.96 +- 0.01, ACC: 0.95 +- 0.01\n",
+      "MLPR adam 50 relu -> Sens: 0.72 +- 0.09, Spec: 0.99 +- 0.01, PPV: 0.92 +- 0.04, NPV: 0.95 +- 0.02, ACC: 0.95 +- 0.01\n",
+      "MLPR adam 50 tanh -> Sens: 0.80 +- 0.04, Spec: 0.99 +- 0.01, PPV: 0.92 +- 0.03, NPV: 0.96 +- 0.01, ACC: 0.96 +- 0.01\n"
      ]
     }
    ],
@@ -456,12 +456,51 @@
     "        PPV_l.append(PPV)\n",
     "        NPV_l.append(NPV)\n",
     "        ACC_l.append(ACC)\n",
-    "    print(etiqueta,('-> Sens: {:.2f}, Spec: {:.2f}, ' +\n",
-    "           'PPV: {:.2f}, NPV: {:.2f}, ACC: {:.2f}').format(np.mean(Sens_l),\n",
-    "                                                           np.mean(Spec_l),\n",
-    "                                                           np.mean(PPV_l),\n",
-    "                                                           np.mean(NPV_l),\n",
-    "                                                           np.mean(ACC_l)))"
+    "    print(etiqueta,('-> Sens: {:.2f} +- {:.2f}, Spec: {:.2f} +- {:.2f}, ' +\n",
+    "           'PPV: {:.2f} +- {:.2f}, NPV: {:.2f} +- {:.2f}, ACC: {:.2f} +- {:.2f}').format(\n",
+    "        np.mean(Sens_l), np.std(Sens_l),\n",
+    "        np.mean(Spec_l), np.std(Spec_l),\n",
+    "        np.mean(PPV_l), np.std(PPV_l),\n",
+    "        np.mean(NPV_l), np.std(NPV_l),\n",
+    "        np.mean(ACC_l), np.std(ACC_l)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLPR sgd 10 relu: 0.86 +- 0.02\n",
+      "MLPR sgd 30 relu: 0.88 +- 0.02\n",
+      "MLPR sgd 50 relu: 0.88 +- 0.03\n",
+      "MLPR adam 10 relu: 0.90 +- 0.03\n",
+      "MLPR adam 30 relu: 0.94 +- 0.01\n",
+      "MLPR adam 50 relu: 0.95 +- 0.01\n",
+      "MLPR sgd 10 tanh: 0.85 +- 0.02\n",
+      "MLPR sgd 30 tanh: 0.88 +- 0.02\n",
+      "MLPR sgd 50 tanh: 0.87 +- 0.02\n",
+      "MLPR adam 10 tanh: 0.92 +- 0.02\n",
+      "MLPR adam 30 tanh: 0.95 +- 0.01\n",
+      "MLPR adam 50 tanh: 0.96 +- 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ind, tag in enumerate(etiquetas):\n",
+    "    mean_test = np.mean(res_test[:,ind])\n",
+    "    std_test = np.std(res_test[:,ind])\n",
+    "    print('{}: {:.2f} +- {:.2f}'.format(tag, mean_test, std_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------------------------------------------------"
    ]
   },
   {
@@ -611,25 +650,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with open('p5_musk_sel-res_test.bin','rb') as file:\n",
-    "#     res_test = pickle.load(file)\n",
-    "# with open('p5_musk_sel-train_indices.bin','rb') as file:\n",
-    "#     train_indices = pickle.load(file)\n",
-    "# with open('p5_musk_sel-test_indices.bin','rb') as file:\n",
-    "#     test_indices = pickle.load(file)\n",
-    "# with open('p5_musk_sel-models.bin','rb') as file:\n",
-    "#     model = pickle.load(file)\n",
-    "# with open('p5_musk_sel-etiquetas.bin','rb') as file:\n",
-    "#     etiquetas = pickle.load(file)"
+    "with open('p5_musk_sel-res_test.bin','rb') as file:\n",
+    "    res_test = pickle.load(file)\n",
+    "with open('p5_musk_sel-train_indices.bin','rb') as file:\n",
+    "    train_indices = pickle.load(file)\n",
+    "with open('p5_musk_sel-test_indices.bin','rb') as file:\n",
+    "    test_indices = pickle.load(file)\n",
+    "with open('p5_musk_sel-models.bin','rb') as file:\n",
+    "    model = pickle.load(file)\n",
+    "with open('p5_musk_sel-etiquetas.bin','rb') as file:\n",
+    "    etiquetas = pickle.load(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +679,7 @@
        "       0.43802506, 0.19722869])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,8 +689,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Test ANOVA**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +804,7 @@
        " 'MLPR adam 50 tanh SEL']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,18 +853,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MLPR adam 30 relu SEL -> Sens: 0.68, Spec: 0.99, PPV: 0.91, NPV: 0.94, ACC: 0.94\n",
-      "MLPR adam 30 tanh SEL -> Sens: 0.63, Spec: 0.99, PPV: 0.88, NPV: 0.94, ACC: 0.93\n",
-      "MLPR adam 50 relu SEL -> Sens: 0.72, Spec: 0.99, PPV: 0.91, NPV: 0.95, ACC: 0.95\n",
-      "MLPR adam 50 tanh SEL -> Sens: 0.65, Spec: 0.99, PPV: 0.89, NPV: 0.94, ACC: 0.93\n",
-      "Wall time: 17min 35s\n"
+      "MLPR adam 30 relu SEL -> Sens: 0.68 +- 0.07, Spec: 0.99 +- 0.01, PPV: 0.91 +- 0.05, NPV: 0.94 +- 0.01, ACC: 0.94 +- 0.01\n",
+      "MLPR adam 30 tanh SEL -> Sens: 0.63 +- 0.07, Spec: 0.99 +- 0.00, PPV: 0.88 +- 0.03, NPV: 0.94 +- 0.01, ACC: 0.93 +- 0.01\n",
+      "MLPR adam 50 relu SEL -> Sens: 0.72 +- 0.06, Spec: 0.99 +- 0.01, PPV: 0.91 +- 0.04, NPV: 0.95 +- 0.01, ACC: 0.95 +- 0.01\n",
+      "MLPR adam 50 tanh SEL -> Sens: 0.65 +- 0.09, Spec: 0.99 +- 0.01, PPV: 0.89 +- 0.05, NPV: 0.94 +- 0.02, ACC: 0.93 +- 0.02\n",
+      "Wall time: 18min 12s\n"
      ]
     }
    ],
@@ -847,20 +893,45 @@
     "        PPV_l.append(PPV)\n",
     "        NPV_l.append(NPV)\n",
     "        ACC_l.append(ACC)\n",
-    "    print(etiqueta,('-> Sens: {:.2f}, Spec: {:.2f}, ' +\n",
-    "           'PPV: {:.2f}, NPV: {:.2f}, ACC: {:.2f}').format(np.mean(Sens_l),\n",
-    "                                                           np.mean(Spec_l),\n",
-    "                                                           np.mean(PPV_l),\n",
-    "                                                           np.mean(NPV_l),\n",
-    "                                                           np.mean(ACC_l)))"
+    "    print(etiqueta,('-> Sens: {:.2f} +- {:.2f}, Spec: {:.2f} +- {:.2f}, ' +\n",
+    "           'PPV: {:.2f} +- {:.2f}, NPV: {:.2f} +- {:.2f}, ACC: {:.2f} +- {:.2f}').format(\n",
+    "        np.mean(Sens_l), np.std(Sens_l),\n",
+    "        np.mean(Spec_l), np.std(Spec_l),\n",
+    "        np.mean(PPV_l), np.std(PPV_l),\n",
+    "        np.mean(NPV_l), np.std(NPV_l),\n",
+    "        np.mean(ACC_l), np.std(ACC_l)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLPR sgd 10 relu SEL: 0.87 +- 0.03\n",
+      "MLPR sgd 30 relu SEL: 0.88 +- 0.03\n",
+      "MLPR sgd 50 relu SEL: 0.89 +- 0.02\n",
+      "MLPR adam 10 relu SEL: 0.92 +- 0.01\n",
+      "MLPR adam 30 relu SEL: 0.94 +- 0.01\n",
+      "MLPR adam 50 relu SEL: 0.95 +- 0.01\n",
+      "MLPR sgd 10 tanh SEL: 0.86 +- 0.03\n",
+      "MLPR sgd 30 tanh SEL: 0.88 +- 0.03\n",
+      "MLPR sgd 50 tanh SEL: 0.89 +- 0.01\n",
+      "MLPR adam 10 tanh SEL: 0.92 +- 0.02\n",
+      "MLPR adam 30 tanh SEL: 0.93 +- 0.01\n",
+      "MLPR adam 50 tanh SEL: 0.93 +- 0.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ind, tag in enumerate(etiquetas):\n",
+    "    mean_test = np.mean(res_test[:,ind])\n",
+    "    std_test = np.std(res_test[:,ind])\n",
+    "    print('{}: {:.2f} +- {:.2f}'.format(tag, mean_test, std_test))"
+   ]
   }
  ],
  "metadata": {
